import { render } from '@testing-library/react';
import { describe, expect, it, vi } from 'vitest';
import { ChartContainer } from './Chart';

describe('Chart', () => {
  const renderBasicChart = (props = {}) => {
    return render(
      <ChartContainer data-testid="chart" config={{}} {...props}>
        <div>Test content</div>
      </ChartContainer>
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicChart();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches active state snapshot', () => {
      const { container } = renderBasicChart({ active: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      const { container } = renderBasicChart();
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  describe('States', () => {
    it('handles active state correctly', () => {
      const { container } = renderBasicChart({ active: true });
      const element = container.firstChild;
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for active state
    });
  });

  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      const { container } = renderBasicChart();
      const element = container.firstChild;
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      const { container } = renderBasicChart(); // TODO: Add screen reader announcement tests
      expect(container.firstChild).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      const { container } = renderBasicChart(); // TODO: Add reduced motion tests
      expect(container.firstChild).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      const { container } = renderBasicChart({ className: 'custom-class' });
      const element = container.firstChild;
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      const { container } = renderBasicChart({ ref }); // Ref forwarding test - environment dependent
      // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      const { container } = renderBasicChart({ 'data-custom': 'test-value' });
      const element = container.firstChild;
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      const { container } = renderBasicChart({ children: undefined });
      expect(container.firstChild).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      const { container } = renderBasicChart({ children: null });
      expect(container.firstChild).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      const { container } = renderBasicChart({ className: '' });
      expect(container.firstChild).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender, container } = renderBasicChart({ className: 'class1' });
      rerender(
        <ChartContainer data-testid="chart" config={{}} className="class2">
          <div>Test</div>
        </ChartContainer>
      );
      const element = container.firstChild;
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      const { container } = render(
        <ChartContainer data-testid="chart" config={{}}>
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </ChartContainer>
      );
      expect(container.firstChild).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      const { container } = render(
        <ChartContainer data-testid="chart" config={{}}>
          <div>
            {Array.from({ length: 100 }, (_, i) => (
              <div key={i}>Item {i}</div>
            ))}
          </div>
        </ChartContainer>
      );
      expect(container.firstChild).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicChart();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicChart();
      unmount();
      const { container } = renderBasicChart();
      expect(container.firstChild).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
