// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chart > Snapshots > matches active state snapshot 1`] = `
<div
  class="chart"
  data-chart="chart-«r1»"
  data-testid="chart"
>
  <div
    class="recharts-responsive-container"
    style="width: 100%; height: 100%; min-width: 0;"
  >
    <div
      height="0"
      width="0"
    >
      Test content
    </div>
  </div>
</div>
`;

exports[`Chart > Snapshots > matches default snapshot 1`] = `
<div
  class="chart"
  data-chart="chart-«r0»"
  data-testid="chart"
>
  <div
    class="recharts-responsive-container"
    style="width: 100%; height: 100%; min-width: 0;"
  >
    <div
      height="0"
      width="0"
    >
      Test content
    </div>
  </div>
</div>
`;
